# Google-Way-Back-Home

./: .gitignore  README.md  cloudbuild.yaml  set_env.sh  workshop.config.json
backend/: Dockerfile  README.md  requirements.txt
backend/app/: config.py  dependencies.py  main.py  storage.py
dashboard/backend/: .env.template  README.md
dashboard/frontend/: .env.example  Dockerfile  README.md  package-lock.json
dashboard/helper/: README.md  get_firebase_token.html  package.json
frontend/: .dockerignore  .gitignore  README.md  next.config.js  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
level_0/: README.md  create_identity.py  customize.py  generator.py  instructions.md  pyproject.toml  requirements.txt
level_1/: README.md  generate_evidence.py  instructions.md  pyproject.toml
level_1/agent/: agent.py  requirements.txt
level_1/agent/agents/: __init__.py  astronomical_analyst.py  botanical_analyst.py  geological_analyst.py
level_1/agent/tools/: confirm_tools.py  mcp_tools.py  star_tools.py
level_1/mcp-server/: main.py
level_1/setup/: requirements.txt  setup_env.sh
level_2/: cloudbuild.yaml  init.sh  set_level_2.sh
level_3/: pyproject.toml  requirements.txt
level_3/backend/app/: main.py
level_3/frontend/src/: BiometricLock.jsx
level_4/: pyproject.toml
level_4/frontend/src/: VolatileWorkbench.jsx
level_4/scripts/: check_redis.sh
level_5/: pyproject.toml  requirements.txt
level_5/frontend/src/: MissionDashboard.jsx
scripts/: billing-enablement.py  run-backend.sh  setup-infrastructure.sh  setup.sh  verify_setup.py
solutions/level_0/: generator.py
(+35 files in other folders)
