[project]
name = "waybackhome-level1"
version = "0.1.0"
description = "Way Back Home - Level 1: Multi-Agent Location Analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "google-adk==1.17.0",
    "google-cloud-bigquery>=3.0.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
]
