[project]
name = "waybackhome-level3"
version = "0.1.0"
description = "Way Back Home - Level 3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "websockets==15.0.1",
    "fastapi==0.128.3",
    "python-dotenv==1.2.1",
    "google-adk==1.24.1",
    "google-genai==1.56.0",
    "websockets==15.0.1",
]

