[project]
name = "waybackhome-level4"
version = "0.1.0"
description = "Way Back Home - Level 4"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai==1.56.0",
    "websockets==15.0.1",
    "fastapi==0.128.3",
    "python-dotenv==1.2.1",
    "google-adk==1.24.1",
    "uvicorn==0.40.0",
    "pydantic==2.11.7",
    "a2a-sdk==0.3.22",
    "redis==7.1.0",
    "aiofiles==25.1.0",
]